docs/7.52/md/abenabap_security.md
---
title: "ABAP - Security Notes"
description: |
  Certain programming techniques can produce gaps in security in ABAP programs if used incorrectly or without sufficient care. The following sections are a summary of the most significant security risks: -   Security Risks Caused by Input from Outside(https://help.sap.com/doc/abapdocu_752_index_htm/
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_security.htm"
abapFile: "abenabap_security.htm"
keywords: ["do", "if", "try", "abenabap", "security"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) → 

ABAP - Security Notes

Certain programming techniques can produce gaps in security in ABAP programs if used incorrectly or without sufficient care. The following sections are a summary of the most significant security risks:

-   [Security Risks Caused by Input from Outside](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynamic_programming_scrty.htm)

-   [Further Security Risks](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenother_programming_scrty.htm)

Note

The security risks discussed here are intended to help ABAP developers spot potential gaps and take all possible precautions to close them. When doing this, they are supported by the security checks in the [extended program checks](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenextended_program_check_glosry.htm "Glossary Entry"). These checks are called SAP NetWeaver AS, add-on for code vulnerability analysis (CVA) and are subject to separate licensing in customer systems.

Continue
[Security Risks Caused by Input from Outside](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynamic_programming_scrty.htm)
[Further Security Risks](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenother_programming_scrty.htm)