docs/7.57/md/abenabap_security.md
---
title: "ABAP - Security Notes"
description: |
  Certain programming techniques can produce gaps in security in ABAP programs if used incorrectly or without sufficient care. The following sections are a summary of the most significant security risks: -   Security Risks Caused by Input from Outside(https://help.sap.com/doc/abapdocu_757_index_htm/
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_security.htm"
abapFile: "abenabap_security.htm"
keywords: ["do", "if", "try", "abenabap", "security"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: ABAP - Security Notes, ABENABAP_SECURITY, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%
0ASuggestion for improvement:)

ABAP - Security Notes

Certain programming techniques can produce gaps in security in ABAP programs if used incorrectly or without sufficient care. The following sections are a summary of the most significant security risks:

-   [Security Risks Caused by Input from Outside](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendynamic_programming_scrty.htm)
-   [Further Security Risks](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenother_programming_scrty.htm)

Hint

The security risks discussed here are intended to help ABAP developers spot potential gaps and take all possible precautions to close them. When doing this, they are supported by the security checks in the [extended program checks](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenextended_program_check_glosry.htm "Glossary Entry"). These checks are called SAP NetWeaver AS, add-on for code vulnerability analysis (CVA) and are subject to separate licensing in customer systems.

Continue
[Security Risks Caused by Input from Outside](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendynamic_programming_scrty.htm)
[Further Security Risks](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenother_programming_scrty.htm)